--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-cloud": "5.33.3",
     "@strapi/plugin-email": "^5.0.0-beta.5",
     "@strapi/plugin-users-permissions": "5.33.3",
+    "@strapi/provider-upload-cloudinary": "^5.33.4",
     "@strapi/strapi": "5.33.3",
     "better-sqlite3": "12.4.1",
     "pg": "^8.17.2",
