feat: Switch email provider to Nodemailer with SMTP configuration and update admin email addresses.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+# Email Settings (SMTP)
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=your_username
+SMTP_PASSWORD=your_password
