--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.33.3",
     "@strapi/email": "5.33.3",
+    "@strapi/plugin-cloud": "5.33.3",
     "@strapi/plugin-users-permissions": "5.33.3",
+    "@strapi/provider-email-nodemailer": "5.33.3",
     "@strapi/provider-upload-cloudinary": "^5.33.4",
     "@strapi/strapi": "5.33.3",
     "better-sqlite3": "12.4.1",
