chore: add keyv override to package.json

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "uuid": "84653462-26ec-4713-abd8-04dd212b2340"
   },
   "overrides": {
-    "koa": "2.16.3"
+    "koa": "2.16.3",
+    "keyv": "4.5.4"
   }
 }
