--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@strapi-community/plugin-rest-cache": "^5.0.0",
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "patch-package": "^8.0.1",
     "typescript": "^5"
   },
   "engines": {
@@ -44,7 +46,6 @@
     "uuid": "84653462-26ec-4713-abd8-04dd212b2340"
   },
   "overrides": {
-    "koa": "2.16.3",
-    "keyv": "4.5.4"
+    "koa": "2.16.3"
   }
 }
