--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry",
-    "postinstall": "patch-package"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi-community/plugin-rest-cache": "^5.0.0",
+    "@strapi/admin": "5.33.3",
     "@strapi/email": "5.33.3",
     "@strapi/plugin-cloud": "5.33.3",
     "@strapi/plugin-users-permissions": "5.33.3",
@@ -24,18 +23,16 @@
     "@strapi/provider-upload-cloudinary": "^5.33.4",
     "@strapi/strapi": "5.33.3",
     "better-sqlite3": "12.4.1",
-    "koa2-ratelimit": "^1.1.3",
     "pg": "^8.17.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^6.30.3",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "patch-package": "^8.0.1",
     "typescript": "^5"
   },
   "engines": {
