feat: enhance configuration with CORS, database settings, and rate limiting middleware for improved security and performance

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,35 @@ TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
 
+# CORS Configuration
+# Povolené originy oddělené čárkou (např. https://zakarialegal.cz,https://www.zakarialegal.cz)
+CORS_ORIGIN=https://zakarialegal.cz,https://www.zakarialegal.cz
+
+# Database Configuration
+# Pro Railway použijte DATABASE_URL (automaticky detekuje SSL)
+DATABASE_CLIENT=postgres
+DATABASE_URL=postgresql://user:password@host:port/database
+# Nebo jednotlivé parametry:
+# DATABASE_HOST=localhost
+# DATABASE_PORT=5432
+# DATABASE_NAME=strapi
+# DATABASE_USERNAME=strapi
+# DATABASE_PASSWORD=strapi
+# DATABASE_SSL=true
+# DATABASE_SSL_REJECT_UNAUTHORIZED=true
+
+# Database Connection Pooling (optimalizace pro Railway)
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=10
+DATABASE_ACQUIRE_TIMEOUT=60000
+DATABASE_CREATE_TIMEOUT=30000
+DATABASE_IDLE_TIMEOUT=30000
+
 # Email Settings (SMTP)
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USERNAME=your_username
 SMTP_PASSWORD=your_password
+
+# Resend API (pokud používáte Resend provider)
+RESEND_API_KEY=your_resend_api_key
